--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
 </head>
 <body class="font-inter bg-monkey-darker text-white min-h-screen flex flex-col monkey-bg">
   <!-- 语言切换 -->
-  <div class="fixed top-4 right-20 z-50">
-    <div class="flex space-x-2 bg-monkey-gray/80 backdrop-blur-md rounded-full p-1 border border-monkey-gray/50">
-      <button id="langEN" class="lang-btn px-3 py-1 rounded-full text-sm font-medium text-gray-300 hover:text-white transition-all">EN</button>
-      <button id="langZH" class="lang-btn px-3 py-1 rounded-full text-sm font-medium bg-monkey-blue text-white transition-all">中文</button>
-    </div>
+<div class="fixed top-4 right-64 z-50"> <!-- 增加right值，避免与用户菜单重叠 -->
+  <div class="flex space-x-2 bg-monkey-gray/80 backdrop-blur-md rounded-full p-1 border border-monkey-gray/50">
+    <button id="langEN" class="lang-btn px-3 py-1 rounded-full text-sm font-medium text-gray-300 hover:text-white transition-all">EN</button>
+    <button id="langZH" class="lang-btn px-3 py-1 rounded-full text-sm font-medium bg-monkey-blue text-white transition-all">中文</button>
+  </div>
   </div>
 
   <!-- 用户账户菜单 -->
@@ -172,6 +172,7 @@
     <section id="dashboard" class="pt-32 pb-20 page-section page-transition">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <!-- 仪表板内容 -->
+                   <p >aaabbS</p>
       </div>
     </section>
   </main>
